avoid node v8 features

--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
   "scripts": {
     "start": "NODE_ENV=test npm test -- -w",
     "lint": "standard",
-    "test:cmd": "node --harmony node_modules/.bin/ava test/**/*.spec.js --timeout=30s",
-    "test": "NODE_ENV=test nyc --check-coverage --lines 80 npm run test:cmd",
+    "test": "NODE_ENV=test nyc --check-coverage --lines 80 ava test/**/*.spec.js --timeout=30s",
     "coverage": "nyc report --reporter=lcov",
     "ci.coverage": "nyc report --reporter=text-lcov | coveralls"
   },
