--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "standard": "^10.0.2"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "boom": "^5.2.0",
     "joi": "^10.6.0",
     "keycloak-auth-utils": "^3.2.1",
