--- a/package.json
+++ b/package.json
@@ -33,31 +33,31 @@
   "scripts": {
     "start": "NODE_ENV=test npm test -- -w",
     "lint": "standard",
-    "test": "NODE_ENV=test nyc --check-coverage --lines 80 ava test/**/*.spec.js --timeout=30s",
+    "test": "NODE_ENV=test nyc --check-coverage --lines 80 ava --timeout=30s",
     "coverage": "nyc report --reporter=lcov",
     "ci.coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "devDependencies": {
-    "ava": "^0.21.0",
-    "coveralls": "^2.13.1",
-    "hapi": "^16.5.2",
-    "nock": "^9.0.14",
-    "nyc": "^11.1.0",
+    "ava": "^0.22.0",
+    "coveralls": "^3.0.0",
+    "hapi": "^17.0.0-rc8",
+    "nock": "^9.0.24",
+    "nyc": "^11.2.1",
     "standard": "^10.0.3"
   },
   "dependencies": {
-    "axios": "^0.16.2",
-    "boom": "^5.2.0",
-    "joi": "^10.6.0",
-    "jsonwebtoken": "^7.4.2",
-    "keycloak-auth-utils": "^3.2.1",
+    "axios": "^0.17.0",
+    "boom": "^6.0.0",
+    "joi": "^13.0.0",
+    "jsonwebtoken": "^8.1.0",
+    "keycloak-auth-utils": "^3.3.0-cr.2",
     "lodash": "^4.17.4"
   },
   "peerDependencies": {
-    "hapi": ">= 12.1.x"
+    "hapi": ">= 17.0.0"
   },
   "engines": {
-    "node": ">=6.0.0",
-    "npm": ">=3.8.8"
+    "node": ">=8.0.0",
+    "npm": ">=5.0.0"
   }
 }
