--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "boom": "^6.0.0",
     "joi": "^13.0.0",
     "jsonwebtoken": "^8.1.0",
+    "jwk-to-pem": "^1.2.6",
     "keycloak-auth-utils": "^3.3.0",
     "lodash": "^4.17.4"
   },
