--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "jsonwebtoken": "^8.1.0",
     "jwk-to-pem": "^1.2.6",
     "keycloak-auth-utils": "^3.3.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "pupa": "^1.0.0"
   },
   "peerDependencies": {
     "hapi": "^17.0.0"
