--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jsonwebtoken": "^8.1.0",
     "jwk-to-pem": "^1.2.6",
     "keycloak-auth-utils": "^3.3.0",
+    "keycloak-connect": "^3.4.1",
     "lodash": "^4.17.4",
     "pupa": "^1.0.0"
   },
