--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "hapi": "^17.0.0"
   },
   "engines": {
-    "node": "^8.0.0",
-    "npm": "^5.0.0"
+    "node": ">=8",
+    "npm": ">=5"
   }
 }
