--- a/package.json
+++ b/package.json
@@ -36,27 +36,27 @@
   "scripts": {
     "start": "NODE_ENV=test npm test -- -w",
     "lint": "standard",
-    "test": "NODE_ENV=test nyc --check-coverage --lines 80 ava -s --timeout=30s",
+    "test": "NODE_ENV=test nyc --check-coverage --lines 80 ava ./test/*.spec.js -s --timeout=30s",
     "coverage": "nyc report --reporter=lcov",
     "ci.coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "devDependencies": {
     "@hapi/hapi": "^18.3.1",
-    "ava": "^1.4.1",
-    "coveralls": "^3.0.3",
+    "ava": "^2.2.0",
+    "coveralls": "^3.0.5",
     "nock": "^10.0.6",
-    "nyc": "^14.0.0",
-    "standard": "^12.0.1"
+    "nyc": "^14.1.1",
+    "standard": "^13.1.0"
   },
   "dependencies": {
     "@hapi/boom": "^7.4.2",
-    "@hapi/joi": "^15.0.0",
+    "@hapi/joi": "^15.1.0",
     "got": "^9.6.0",
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^1.2.6",
-    "keycloak-connect": "^6.0.0",
-    "lodash": "^4.17.11",
-    "pupa": "^1.0.0"
+    "keycloak-connect": "^6.0.1",
+    "lodash": "^4.17.15",
+    "pupa": "^2.0.0"
   },
   "peerDependencies": {
     "@hapi/hapi": "^18.3.1"
