--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "start": "NODE_ENV=test npm test -- -w",
     "lint": "standard",
-    "test": "NODE_ENV=test nyc --check-coverage --lines 80 ava ./test/*.spec.js -s --timeout=30s",
+    "test": "NODE_ENV=test nyc --check-coverage --lines 80 ava ./test/index.spec.js -s --timeout=30s",
     "coverage": "nyc report --reporter=lcov",
     "ci.coverage": "nyc report --reporter=text-lcov | coveralls"
   },
@@ -55,8 +55,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^1.2.6",
     "keycloak-connect": "^6.0.1",
-    "lodash": "^4.17.15",
-    "pupa": "^2.0.0"
+    "lodash": "^4.17.15"
   },
   "peerDependencies": {
     "@hapi/hapi": "^18.3.1"
