--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "start": "NODE_ENV=test npm test -- -w",
     "lint": "standard",
-    "test": "NODE_ENV=test nyc --check-coverage --lines 80 ava ./test/index.spec.js -s --timeout=30s",
+    "test": "NODE_ENV=test nyc --check-coverage --lines 80 ava ./test/*.spec.js -s --timeout=30s",
     "coverage": "nyc report --reporter=lcov",
     "ci.coverage": "nyc report --reporter=text-lcov | coveralls"
   },
