fix bad travis caching

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ language: node_js
 node_js:
   - 10
   - lts/*
+  - node
+
+cache:
+    npm: false
+    directories:
+        - $HOME/.npm
 
 before_script:
 - npm install
