--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "dependencies": {
     "@hapi/boom": "^9.0.0",
-    "@hapi/joi": "^17.0.0",
+    "joi": "^17.0.0",
     "got": "^11.8.1",
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^1.2.6",
